little change handlebars

--- a/handlebars/views/main.hbs
+++ b/handlebars/views/main.hbs
@@ -20,7 +20,7 @@
     {{else}}
     <h3 style="background-color:aquamarine">No se encontraron productos</h3><br>
     {{/if}}
-    <form action="/carga" method="GET">
+    <form action="/" method="GET">
         <button type="submit" class="btn btn-primary">Ir al formulario de carga de productos</button>
     </form>
 </div>
